# oysters

./: .gitignore  Cargo.toml  README.md  SECURITY.md  justfile
.config/: config.example.toml
.github/: CONTRIBUTING.md
crates/oysters/: Cargo.toml
crates/oysters/src/: config.rs  main.rs
crates/oysters_cli/: Cargo.toml
crates/oysters_cli/src/: main.rs
crates/oysters_client/: Cargo.toml
crates/oysters_client/src/: lib.rs
crates/oysters_core/: Cargo.toml
crates/oysters_core/examples/: hashmap_1mil.rs  pagemap.rs  pagemap_1k.rs  pagemap_1mil.rs
crates/oysters_core/src/: lib.rs  lru.rs  oyster.rs  pearl.rs  persistance.rs  sqlite_backend.rs  time.rs
crates/oysters_core/src/pagemap/: map.rs  mod.rs  pagebook.rs
systemd/: README.md  oysters-dump.service  oysters-dump.timer  oysters-scan.service  oysters-scan.timer  oysters.service  systemd_install.sh
