[workspace]
resolver = "3"
members = [
    "crates/oysters",
    "crates/oysters_cli",
    "crates/oysters_client",
    "crates/oysters_core",
]
package.authors = ["trisuaso"]
package.repository = "https://github.com/trisuaso/oysters"
package.license = "AGPL-3.0-or-later"

[profile.dev]
incremental = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
# panic = "abort"
panic = "unwind"
strip = true
incremental = true
