[package]
name = "oysters"
description = "Simple HTTP server for the Oysters LRU k/v store"
version = "0.1.4"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
lru = ["oysters_core/lru"]
persistance = ["oysters_core/persistance"]
bundled_sqlite = ["oysters_core/bundled_sqlite"]
default = ["lru", "persistance", "bundled_sqlite"]

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
oysters_core = { path = "../oysters_core", version = "0.1.3", features = [
    "serde",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
pathbufd = "0.1.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["trace"] }
