[package]
name = "oysters_cli"
description = "Simple HTTP CLI for the Oysters LRU k/v store"
version = "0.1.3"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = "4.5.32"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
oysters_client = { path = "../oysters_client", version = "0.1.3" }

[[bin]]
name = "oysters-cli"
path = "./src/main.rs"
