[package]
name = "oysters_client"
description = "Simple HTTP client for the Oysters LRU k/v store"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
lru = ["oysters_core/lru"]
persistance = ["oysters_core/persistance", "oysters_core/bundled_sqlite"]
default = ["lru", "persistance"]

[dependencies]
reqwest = { version = "0.12.14", features = ["json"] }
oysters_core = { path = "../oysters_core", version = "0.1.1", features = [
    "serde",
], default-features = false }
