[package]
name = "oysters_client"
description = "Simple HTTP client for the Oysters LRU k/v store"
version = "0.1.3"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
bundled_sqlite = ["oysters_core/bundled_sqlite"]

[dependencies]
reqwest = { version = "0.12.14", features = ["json"] }
oysters_core = { path = "../oysters_core", version = "0.1.2", features = [
    "serde",
], default-features = false }
