[package]
name = "oysters_core"
authors = { workspace = true }
version = "0.1.0"
edition = "2024"

[features]
lru = ["dep:chrono"]
persistance = ["dep:rusqlite"]
bundled_sqlite = ["dep:rusqlite", "rusqlite/bundled"]
serde = ["dep:serde"]
default = ["lru", "persistance", "serde"]

[dependencies]
chrono = { version = "0.4.40", optional = true }
pathbufd = "0.1.4"
rusqlite = { version = "0.34.0", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
