[package]
name = "oysters_core"
description = "Core for the Oysters LRU k/v store"
version = "0.1.5"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
lru = ["dep:chrono"]
persistance = ["dep:rusqlite"]
sqlite_backend = ["dep:rusqlite"]
bundled_sqlite = ["dep:rusqlite", "rusqlite/bundled"]
serde = ["dep:serde"]
default = ["lru", "persistance", "serde"]

[dependencies]
chrono = { version = "0.4.40", optional = true }
lz4_flex = "0.11.3"
pathbufd = "0.1.4"
rusqlite = { version = "0.34.0", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "pagemap"
